# contrary-hackathon-21

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
cli/: main.py
nginx/: Dockerfile  default.conf
scripts/: make_layer.sh
terraform/: main.tf  outputs.tf  provider.tf  setup.sh  variables.tf
topshot_model/: MLR_model_v1.pickle  MLR_model_v2.pickle  main.py  scrape.py
web/: app.py
web/static/css/: main.css
web/templates/: base.html  index.html  prediction.html  result.html
