[tool.poetry]
name = "cli"
version = "0.1.0"
description = ""
authors = ["Max Hoffman <max@dolthub.com>"]

packages = [
    { include = "cli" }
]

[tool.poetry.scripts]
cli = "cli.main:main"

[tool.poetry.dependencies]
python = "^3.7"
fire = "^0.4.0"
fastapi = "^0.63.0"
Uvicorn = "^0.13.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
