[tool.poetry]
name = "topshot_model"
version = "0.1.0"
description = ""
authors = ["Max Hoffman <max@dolthub.com>"]

packages = [
    { include = "topshot_model" }
]

[tool.poetry.scripts]
cli = "topshot_model.main:main"

[tool.poetry.dependencies]
python = "^3.7"
fire = "^0.4.0"
fastapi = "^0.63.0"
Uvicorn = "^0.13.4"
jinja2 = "^2.11.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
